# mre-pyproject-setuptools

./: README.md  main.py  pyproject.toml
tests/: sdk_test.py
